fix: overflow, declare message keys in controller

--- a/public/stylesheets/globalCSS.css
+++ b/public/stylesheets/globalCSS.css
@@ -7,5 +7,5 @@
     --btn-bg-cl-hvr: #e7e7e7;
     --btn-clr: silver;
     --btn-clr-hvr: #8d38a8;
-    --section-bg-clr: #D3D3D3;
+    --bg-clr: #D3D3D3;
 }
