--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -2,6 +2,10 @@
   color: var(--font-clr);
 }
 
+body {
+  background-color: var(--bg-clr);
+}
+
 input, textarea {
   color: black;
 }
